[package]
name = "client-ffi"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "connlib"
crate-type = ["lib", "cdylib", "staticlib"]
doc = false

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
client-shared = { workspace = true }
connlib-model = { workspace = true }
dns-types = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
ip-packet = { workspace = true }
ip_network = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
logging = { workspace = true }
phoenix-channel = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
socket-factory = { workspace = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["std", "attributes"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tun = { workspace = true }
uniffi = { workspace = true }
url = { workspace = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2.0", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.2"

[lints]
workspace = true
