[package]
name = "client-ffi"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "connlib"
crate-type = ["lib", "cdylib", "staticlib"]
doc = false

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
client-shared = { workspace = true }
connlib-model = { workspace = true }
ip-packet = { workspace = true }
ip_network = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
logging = { workspace = true }
phoenix-channel = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
socket-factory = { workspace = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true, features = ["std", "attributes"] }
tracing-subscriber = { workspace = true }
tun = { workspace = true }
uniffi = { workspace = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2.0", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.2"
jni = { workspace = true }
rustls-platform-verifier = { workspace = true }

[lints]
workspace = true
