[package]
name = "firezone-client-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
# Will be needed to safely revert `/etc/resolv.conf`
atomicwrites = "0.4.3"
clap = { version = "4.5", features = ["derive",  "env"] }
connlib-client-shared = { workspace = true }
connlib-shared = { workspace = true }
firezone-cli-utils = { workspace = true }
humantime = "2.1"
secrecy = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
resolv-conf = "0.7.0"
thiserror = "1.0.57"
url = { version = "2.3.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0.1"
nix = { version =  "0.28.0", features = ["user"] }

[lints]
workspace = true
