[package]
name = "dns-over-tcp"
version = "0.1.0"
edition = "2021"
description = "User-space implementation of DNS over TCP."

[dependencies]
anyhow = "1.0"
domain = { workspace = true }
ip-packet = { workspace = true }
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }
tracing = { workspace = true }
itertools = "0.13"

[dev-dependencies]
firezone-bin-shared = { workspace = true }
ip_network = { version = "0.4", default-features = false }
tokio = { workspace = true, features = ["process", "rt", "macros"] }
tun = { workspace = true }
firezone-logging = { workspace = true }
