[package]
name = "firezone-cli-utils"
# mark:automatic-version
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ip_network = "0.4"
url = { version = "2.3.1", default-features = false }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-log = "0.2"
clap = { version = "4.4", features = ["derive",  "env"] }
ctrlc  = "3.4"
