[package]
name = "firezone-cli-utils"
# mark:automatic-version
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.3.1", default-features = false }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-log = "0.2"
clap = { version = "4.5", features = ["derive",  "env"] }

[lints]
workspace = true
