[package]
name = "firezone-gateway"
# mark:next-gateway-version
version = "1.4.18"
edition = { workspace = true }
license = { workspace = true }
description = "Gateway for the Firezone zero-trust access product."

[package.metadata.deb]
maintainer = "Firezone Inc. <support@firezone.dev>"
copyright = "2025, Firezone Inc."
maintainer-scripts = "debian/"
systemd-units = { enable = false }
extended-description = "" # Empty string to avoid embedding the README
revision = ""
section = "Network"
assets = [
    ["target/release/firezone-gateway", "usr/bin/", "755"],
    ["debian/firezone-gateway-init.sh", "usr/bin/firezone-gateway-init", "755"],
    ["debian/sysusers.conf", "usr/lib/sysusers.d/firezone-gateway.conf", "644"],
    ["debian/tmpfiles.conf", "usr/lib/tmpfiles.d/firezone-gateway.conf", "644"],
]
depends = 'iptables'

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
boringtun = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
connlib-model = { workspace = true }
dns-types = { workspace = true }
either = { workspace = true }
firezone-bin-shared = { workspace = true }
firezone-logging = { workspace = true }
firezone-telemetry = { workspace = true }
firezone-tunnel = { workspace = true }
futures = { workspace = true }
futures-bounded = { workspace = true }
hickory-resolver = { workspace = true }
ip-packet = { workspace = true }
ip_network = { workspace = true }
libc = { workspace = true, features = ["std", "const-extern-fn", "extra_traits"] }
moka = { workspace = true, features = ["future"] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
phoenix-channel = { workspace = true }
resolv-conf = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
snownet = { workspace = true }
socket-factory = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "fs", "signal", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tun = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }
dns-lookup = { workspace = true }
nix = { workspace = true, features = ["user"] }

[target.'cfg(target_os = "macos")'.dependencies]
dns-lookup = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }

[lints]
workspace = true
