[package]
authors = ["Firezone, Inc."]
default-run = "firezone-gui-client"
description = "Firezone"
name = "firezone-gui-client"
# mark:next-gui-version
version = "1.3.9"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5", features = ["derive",  "env"] }
firezone-bin-shared = { path = "../bin-shared" }
firezone-gui-client-common = { path = "../gui-client/src-common" }
firezone-headless-client = { path = "../headless-client" }
firezone-logging = { path = "../logging" }
firezone-telemetry = { path = "../telemetry" }
glib = "0.18.5"
gtk = "0.18.1"
notify-rust = "4.11.3"
open = "5.3.0"
rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
secrecy = "0.8"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tray-icon = "0.19.0"
url = "2.5.2"

[patch.crates-io]
boringtun = { git = "https://github.com/cloudflare/boringtun", branch = "master" }
str0m = { git = "https://github.com/algesten/str0m", branch = "main" }
ip_network = { git = "https://github.com/JakubOnderka/ip_network", branch = "master" } # Waiting for release.
ip_network_table = { git = "https://github.com/edmonds/ip_network_table", branch = "some-useful-traits" } # For `Debug` and `Clone`
tracing-stackdriver = { git = "https://github.com/thomaseizinger/tracing-stackdriver", branch = "deps/bump-otel-0.23" } # Waiting for release.

[profile.release]
codegen-units = 1
#debug = "full"
lto = "thin" # Don't have enough RAM in my VM to do fat LTO
split-debuginfo = "packed"
strip = "none"

[workspace]

[package.metadata.deb]
assets = [
    ["../gui-client/src-tauri/deb_files/sysusers.conf", "usr/lib/sysusers.d/firezone-client-ipc.conf", "644"],
    ["../gui-client/src-tauri/deb_files/firezone-client-ipc.service", "usr/lib/systemd/system/", "644"],
    ["../gui-client/src-tauri/icons/128x128.png", "/usr/share/icons/hicolor/128x128/apps/firezone-client-gui.png", "644"],
    # TODO: Once Tauri is removed on Linux, we can move this under `/usr/lib` so it's out of $PATH. We don't want users accidentally running it. For now Tauri and GTK share the systemd service unit,
    ["target/release/firezone-client-ipc", "usr/bin/", "755"],
    ["target/release/firezone-gui-client", "usr/bin/firezone-client-gui", "755"],
]
maintainer-scripts = "../gui-client/src-tauri/deb_files"
