[package]
name = "firezone-headless-client"
# mark:next-headless-version
version = "1.3.7"
edition = "2021"
authors = ["Firezone, Inc."]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
atomicwrites = { workspace = true } # Needed to safely backup `/etc/resolv.conf` and write the device ID on behalf of `gui-client`
backoff = "0.4.0"
clap = { version = "4.5", features = ["derive", "env", "string"] }
connlib-client-shared = { workspace = true }
connlib-model = { workspace = true }
firezone-bin-shared = { workspace = true }
firezone-logging = { workspace = true }
firezone-telemetry = { workspace = true }
futures = "0.3.30"
humantime = "2.1"
ip-packet = { workspace = true }
ip_network = { version = "0.4", default-features = false }
phoenix-channel = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_variant = "0.1.3"
smbios-lib = "0.9.2"
thiserror = { version = "1.0", default-features = false }
# This actually relies on many other features in Tokio, so this will probably
# fail to build outside the workspace. <https://github.com/firezone/firezone/pull/4328#discussion_r1540342142>
tokio = { workspace = true, features = ["macros", "signal", "process", "time", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.5.2", default-features = false }
uuid = { version = "1.10", default-features = false, features = ["std", "v4", "serde"] }

[dev-dependencies]
tempfile = "3.13.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
mutants = "0.0.3" # Needed to mark functions as exempt from `cargo-mutants` testing

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0.1"
libc = "0.2.150"
nix = { version = "0.29.0", features = ["fs", "user", "socket"] }
resolv-conf = "0.7.0"
rtnetlink = { workspace = true }
sd-notify = "0.4.2" # This is a pure Rust re-implementation, so it isn't vulnerable to CVE-2024-3094

[target.'cfg(target_os = "macos")'.dependencies]
dirs = "5.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.3.2"
itertools = "0.13.0"
known-folders = "1.2.0"
windows-service = "0.7.0"
winreg = "0.52.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
  # For DNS control and route control
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",

  "Win32_Security", # For named pipe IPC
  "Win32_System_GroupPolicy", # For NRPT when GPO is used
  "Win32_System_SystemInformation", # For uptime
  "Win32_System_SystemServices",
  "Win32_System_Pipes",
]

[lints]
workspace = true
