[package]
name = "http-health-check"
# mark:automatic-version
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.36.0", features = ["net"] }
clap = { version = "4.5.4", features = ["derive", "env"] }

[lints]
workspace = true
