[package]
name = "http-health-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.38.0", features = ["net"] }
clap = { version = "4.5.4", features = ["derive", "env"] }

[lints]
workspace = true
