[package]
name = "http-test-server"
# mark:automatic-version
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7.5", features = ["http1", "tokio"] }
tokio = { version = "1.36.0", features = ["net"] }
serde = {version = "1", features = ["derive"]}
futures = "0.3"

[lints]
workspace = true
