[package]
name = "firezone-iced-client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.0", features = ["image", "multi-window"], default-features = false }
tao = "0.30.0"
tokio = { version = "1.40.0", features = ["sync"] }
tray-icon = "0.17.0"

[lints]
# Can't use workspace because the GTK dep for Tauri and `tray-icon` conflict
# workspace = true
