[package]
name = "ip-packet"
version = "0.1.0"
edition = "2021"
authors = ["Firezone, Inc."]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptest = ["dep:proptest"]

[dependencies]
anyhow = "1.0.86"
domain = "0.10.1"
pnet_packet = { version = "0.35" }
proptest = { version = "1", optional = true }
thiserror = "1"
tracing = "0.1"
etherparse = "0.15.0"

[dev-dependencies]
test-strategy = "0.3.1"

[lints]
workspace = true
