[package]
name = "ip-packet"
version = "0.1.0"
edition = "2021"
authors = ["Firezone, Inc."]
publish = false
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptest = ["dep:proptest"]

[dependencies]
anyhow = { workspace = true }
etherparse = { workspace = true }
proptest = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-strategy = { workspace = true }

[lints]
workspace = true
