[package]
name = "firezone-logging"
version = "0.1.0"
edition = "2021"
authors = ["Firezone, Inc."]
publish = false
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
nu-ansi-term = { workspace = true }
rand = { workspace = true }
sentry-tracing = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
