[package]
name = "firezone-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
backoff = "0.4"
base64 = "0.22.1"
bytecodec = "0.4.15"
bytes = "1.4.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
derive_more = { version = "0.99.18", features = ["from"] }
futures = "0.3.29"
hex = "0.4.3"
hex-display = "0.3.0"
http-health-check = { workspace = true }
mio = "0.8.11"
once_cell = "1.17.1"
opentelemetry = { version = "0.24.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.17.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
phoenix-channel = { path = "../phoenix-channel" }
proptest = { version = "1", optional = true }
rand = "0.8.5"
secrecy = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
socket-factory = { workspace = true }
socket2 = { workspace = true }
stun_codec = "0.3.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
tracing = { workspace = true, features = ["log"] }
tracing-core = "0.1.31"
tracing-opentelemetry = "0.25.0"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
trackable = "1.3.0"
url = "2.4.1"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
difference = "2.0.0"
env_logger = "0.11.3"
test-strategy = "0.3.1"

[[test]]
name = "regression"
required-features = ["proptest"]

[lints]
workspace = true
